force-app/main/default/objects/Committee_Assignment__c/Committee_Assignment__c.object-meta.xml
<CustomObject>
    <description>One record per person per committee per fiscal year (July 1-June 30) capturing their role that year. Contacts need not be board members (staff/advisors can serve) - confirm with client (Q17). JSI-123 Board Tracking. Author: Jason Ott.</description>
    <label>Committee Assignment</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Committee Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Committee Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>