force-app/main/default/objects/Committee_Assignment__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Whether the person is currently serving in this committee assignment. JSI-123 / Jason Ott.</description>
    <label>Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>