force-app/main/default/objects/Committee_Assignment__c/fields/Assignment_Key__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Key__c</fullName>
    <description>Dedupe backstop = Contact Id + '|' + Committee Id + '|' + Fiscal Year. Unique, case-insensitive. Stamped by a before-save flow (Phase 2). JSI-123 / Jason Ott.</description>
    <externalId>true</externalId>
    <label>Assignment Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>