force-app/main/default/objects/Committee_Assignment__c/fields/Committee__c.field-meta.xml
<CustomField>
    <fullName>Committee__c</fullName>
    <description>The committee or subcommittee served. Restrict delete to preserve history. JSI-123 / Jason Ott.</description>
    <label>Committee</label>
    <referenceTo>Committee__c</referenceTo>
    <relationshipLabel>Committee Assignments</relationshipLabel>
    <relationshipName>Committee_Assignments</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>