force-app/main/default/objects/Committee_Assignment__c/fields/Committee_Role__c.field-meta.xml
<CustomField>
    <fullName>Committee_Role__c</fullName>
    <description>The person's role on this committee for the year. Chair or Co-Chair triggers the elevated $10k annual commitment. JSI-123 / Jason Ott.</description>
    <label>Committee Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Co-Chair</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
                <default>true</default>
                <label>Member</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>