force-app/main/default/objects/Committee_Assignment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The person serving on the committee. Restrict delete to preserve participation history. JSI-123 / Jason Ott.</description>
    <label>Committee Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Committee Assignments</relationshipLabel>
    <relationshipName>Committee_Assignments</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>