force-app/main/default/objects/Committee_Assignment__c/fields/Fiscal_Year_Label__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_Label__c</fullName>
    <description>The board/fiscal year (July 1-June 30) this assignment applies to, matching Annual Giving Summary labels (e.g. "FY2027 (Jul 2026-Jun 2027)"). The "by year" key for committee participation. JSI-123 / Jason Ott.</description>
    <label>Fiscal Year</label>
    <length>40</length>
    <type>Text</type>
</CustomField>