force-app/main/default/objects/Committee_Assignment__c/fields/FY_Start__c.field-meta.xml
<CustomField>
    <fullName>FY_Start__c</fullName>
    <description>July 1 anchor date of the assignment's fiscal year, for date-based filtering and point-in-time rosters. JSI-123 / Jason Ott.</description>
    <label>Fiscal Year Start</label>
    <type>Date</type>
</CustomField>